# beirdobot

./: .braids  .gitignore  COPYING  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  Makefile.local  README  acinclude.m4  beirdobot.spec  configure  configure.ac  configure.ac.in
bot/: Makefile
bot/docs/: README  README.userauth  database.sql  initialdata.sql
bot/include/: .gitignore  balanced_btree.h  clucene.h  config.h.in  db_schema.h  environment.h  linked_list.h  logging.h  protected_data.h  protos.h  queue.h  release.h.in  structs.h
bot/lib/: .gitignore  datemsk.txt
bot/scripts/: .users  mkrelease
bot/src/: .gitignore  Makefile  Makefile.in  authenticate.c  balanced_btree.c  bot.c  bot_cmds.c  clucene.cc  curses.c  import.c  linked_list.c  logging.c  main.c  mysql.c  mysql_upgrade.c  notice.c  plugin_api.c  protected_data.c  queue.c  regexp.c  thread_api.c  transmit.c
bot/src/botnet-1.6.4/: .gitignore  AUTHORS  ChangeLog  INSTALL  License.txt  Makefile.am  Makefile.gjh  Makefile.in  README  aclocal.m4  botnet-config.in  botnet.txt  config.h.in  configure  configure.in  file_id.diz  todo.txt
bot/src/botnet-1.6.4/example/: .gitignore  Makefile.am  Makefile.in  bot.c  serv.c
bot/src/botnet-1.6.4/example/Windows/: Makefile.am  Makefile.in
bot/src/botnet-1.6.4/example/Windows/Example/: Example.dsp  Example.dsw  Example.plg  Makefile.am  Makefile.in
bot/src/botnet-1.6.4/makelib/: Makefile.am  Makefile.in  botnet.c  botnet.h  dcc_chat.c  dcc_send.c  includes.h  output.c  server.c  utils.c
bot/src/botnet-1.6.4/makelib/Windows/: Makefile.am  Makefile.in
bot/src/botnet-1.6.4/makelib/Windows/Botnet/: Botnet.dsp  Botnet.dsw  Makefile.am  Makefile.in
bot/src/cjson/: .gitignore  cJSON.c
bot/src/clucene/: CMakeLists.txt  Makefile.gjh
bot/src/clucene/src/contribs-lib/: CMakeLists.txt
bot/src/clucene/src/contribs-lib/CLucene/highlighter/: TokenSources.cpp
bot/src/clucene/src/core/CLucene/search/spans/: TermSpans.cpp
bot/src/clucene/src/shared/CLucene/config/: repl_tchar.h
bot/src/libmrss-0.12/: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.gjh  Makefile.in  aclocal.m4  configure  configure.ac  doxy.conf  mrss.pc  mrss.pc.in
bot/src/libmrss-0.12/debian/: Makefile.in  changelog  control  copyright  files
bot/src/libmrss-0.12/doc/: Makefile.in  main.doxy
bot/src/libmrss-0.12/phpmrss/: Makefile.in  php.c
bot/src/libmrss-0.12/src/: .gitignore  Makefile.am  Makefile.in  mrss.h  mrss_download.c  mrss_edit.c  mrss_free.c  mrss_generic.c  mrss_internal.h  mrss_parser.c  mrss_write.c
bot/src/libmrss-0.12/test/: .gitignore  Makefile.am  Makefile.in  new.c  parser.c  write.c
bot/src/libnxml-0.11/: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.gjh  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  doxy.conf  nxml.pc  nxml.pc.in
bot/src/libnxml-0.11/debian/: Makefile.am  Makefile.in  changelog  control  files  rules
bot/src/libnxml-0.11/doc/: Makefile.in  main.doxy
bot/src/libnxml-0.11/src/: Makefile.am  Makefile.in  nxml.h  nxml_download.c  nxml_dtd.c  nxml_easy.c  nxml_edit.c  nxml_entity.c  nxml_error.c  nxml_free.c  nxml_init.c  nxml_internal.h  nxml_namespace.c  nxml_parser.c  nxml_string.c  nxml_tools.c  nxml_utf.c  nxml_write.c
bot/src/libnxml-0.11/test/: .gitignore  Makefile.am  Makefile.in  dtd.c  easy.c  namespace.c  new.c  parser.c  write.c
bot/src/opie-2.32/: .gitignore  Makefile.gjh  Makefile.in  opie.h  opieinfo.c
bot/src/opie-2.32/debian/: README.Debian  changelog  control  copyright  opie-client.docs  opie-server.README.Debian  opie-server.conffiles  rules
bot/src/opie-2.32/libmissing/: atexit.c  endspent.c  env.c  getcwd.c  getspnam.c  getusershell.c  initgroups.c  memcmp.c  memcpy.c  memset.c  setegid.c  seteuid.c  sigaddset.c  sigemptyset.c  sigprocmask.c  strchr.c  strerror.c  strncasecmp.c  strrchr.c  strtoul.c  sysconf.c  uname.c
bot/src/opie-2.32/libopie/: .gitignore
bot/src/plugins/: .gitignore  Makefile  Makefile.in  blah.lua  burp.lua  core.c  datemsk.txt  dns.c  embedding.pl  fart.c  luascript.c  mailbox.c  perl.c  plugin_list.h  rssfeed.c  svngit.c  test.pl  trac.c  tracredir.c  trout.c  url.c
bot/src/plugins/perlext/Beirdobot/: Beirdobot.xs  Changes  MANIFEST  Makefile.PL  README
bot/src/plugins/perlext/Beirdobot/lib/: Beirdobot.pm
bot/src/plugins/perlext/Beirdobot/t/: Beirdobot.t
scripts/: gitlog2changelog.py  mkrelease  tagversion
web/: .htaccess  Makefile  Makefile.in  beirdobot.php
web/includes/: db.php  errordisplay.php  errors.php  init.php  irc_channels.php  irc_messages.php  irc_servers.php  utils.php
web/js/: ajax.js  browser.js  debug.js  utils.js  visibility.js
web/modules/: channel.php  search.php  welcome.php
web/modules/channel/: history.php
web/skins/default/: channel.css  global.css  log.css  search.css
web/templates/: channel.php  footer.php  header.php  search.php  welcome.php
web/templates/channel/: history.php
web/templates/log/: table_empty.php  table_foot.php  table_head.php  table_message.php  table_newday.php
webservice/: .gitignore  Makefile.in  cJSON.c  clucene.cc  mongoose.c  webservice.c
webservice/mongoose/: mongoose.c
