noinst_PROGRAMS = parser write new easy dtd namespace

parser_SOURCES = parser.c
parser_LDADD = ../src/libnxml.la

write_SOURCES = write.c
write_LDADD = ../src/libnxml.la

new_SOURCES = new.c
new_LDADD = ../src/libnxml.la

easy_SOURCES = easy.c
easy_LDADD = ../src/libnxml.la

dtd_SOURCES = dtd.c
dtd_LDADD = ../src/libnxml.la

namespace_SOURCES = namespace.c
namespace_LDADD = ../src/libnxml.la

INCLUDES = -I../src

